--- a/recipes/one-pot-spaghetti.html
+++ b/recipes/one-pot-spaghetti.html
@@ -1,1 +1,37 @@
 <h1>One-Pot Spaghetti</h1>
+<img src="./images/one-pot-spaghetti.jpeg" alt="Bowl with One-Pot Spaguetti" />
+<h2>Description</h2>
+<p>
+	Variation of an old Southern Living recipe - a double recipe will fill a Dutch oven and make
+	plenty for an extended family dinner.
+</p>
+<h2>Ingredients</h2>
+<ul>
+	<li>1 pound lean ground beef</li>
+	<li>1 large onion, chopped</li>
+	<li>2 cloves garlic, minced</li>
+	<li>1 (14 ounce) can tomato sauce</li>
+	<li>1 (14 ounce) can petite diced tomatoes</li>
+	<li>2 cups water</li>
+	<li>1 tablespoon chili powder</li>
+	<li>1 teaspoon dried oregano</li>
+	<li>1 teaspoon ground black pepper</li>
+	<li>7 ounces whole wheat spaghetti</li>
+	<li>¼ cup grated Parmesan cheese, or to taste (Optional)</li>
+</ul>
+<h2>Steps</h2>
+<ol>
+	<li>
+		Heat a Dutch oven over medium-high heat. Cook and stir ground beef, onion, and garlic until beef
+		is browned and crumbly and onion is translucent, 5 to 7 minutes. Drain and discard excess
+		grease.
+	</li>
+	<li>
+		Stir in tomato sauce, diced tomatoes, water, chili powder, oregano, and black pepper. Bring to a
+		boil. Cover, reduce heat, and let simmer, stirring often, for about 30 minutes.
+	</li>
+	<li>
+		Break spaghetti into thirds and add to the pot; cover and simmer, stirring often, until pasta is
+		tender, about 20 minutes. Serve topped with Parmesan cheese.
+	</li>
+</ol>
