--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-		<a href="./recipes/one-pot-spaghetti.html">One-Pot Spaguetti</a>
+		<ul>
+			<li><a href="./recipes/one-pot-spaghetti.html">One-Pot Spaguetti</a></li>
+			<li><a href="./recipes/air-fryer-potato-wedges.html">Air Fryer Potato Wedges</a></li>
+			<li><a href="./recipes/john-wayne-casserole.html">John Wayne Casserole</a></li>
+		</ul>
 	</body>
 </html>
